kubernetes/lecture-cluster/redis-service-clusterip.yml
apiVersion: v1
kind: Service

metadata:
    name: myredisservice

spec:
    type: ClusterIP
    ports:
        - targetPort: 6379
          port: 6379

    selector:
        type: cache
